--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body::-webkit-scrollbar-thumb {
     margin-right: 1.5rem; }
   .header .navMenu a {
     font-family: "Hind Vadodara", sans-serif;
-    color: #111;
+    color: #000;
     font-size: 20px;
     text-decoration: none; }
     .header .navMenu a:hover {
@@ -114,6 +114,25 @@ body::-webkit-scrollbar-thumb {
     border-radius: 4px;
     border: 1px solid #bbb;
     cursor: pointer;
+}
+.buy-card{
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #fff;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: green;
+}
+.buy-card:hover{
+  opacity: .6;
 }
 
 .submenu .fa-cart-shopping{
@@ -192,6 +211,9 @@ main {
       color: #fff; }
       .wrap .wrap-texto .buttom:hover {
         background-color: #dca2af; }
+        .wrap .wrap-texto .textJs {
+          color: white;
+        }
 
 /* GLOBAL PARA SUBTITULOS */
 /* BOTONES */
@@ -212,6 +234,49 @@ main {
   .bottomAbout:hover {
     transform: translateY(-5px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2); }
+
+.switch{
+  background: #343D5B;
+  border-radius: 1000px;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  outline: none;
+}
+.switch span{
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+  background: none;
+  color: #fff;
+}
+
+.switch::after{
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background: #F1F1F1;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 100px;
+  transition: .3s ease all;
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2);
+}
+
+.switch.active{
+  background: orange;
+  color: #000;
+}
+
+.switch.active::after{
+  right: 0;
+  left: unset;
+}
 
 .about p, .about .aboutDer {
   display: flex;
@@ -815,3 +880,24 @@ input[type="radio"]:checked + label {
   .faq-answer p {
     padding: 10px 0;
     font-size: 10px; } }
+
+body.darkmode{
+  background-color: rgb(32, 32, 44);
+  color: white;
+}
+
+.darkmode .fyq .faq-content .faq-container .faq-collaps{
+  background-color: #000;
+}
+
+.darkmode .line{
+  background-color: white;
+}
+
+.darkmode .submenu .fa-cart-shopping{
+  color: #000;
+}
+
+.darkmode th, .darkmode td{
+  color: #000;
+}
