--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,46 @@ body::-webkit-scrollbar-thumb {
   margin-top: 20px;
   font-weight: 600; }
 
+/* Preloader */
+
+.preloader{
+  width: 100%;
+  height: 100%;
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100000;
+}
+.spinner{
+  width: 70px;
+  height: 70px;
+  border-top: 5px solid #E38C8C;
+  border-right: 5px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  right: 0;
+  margin: auto;
+  z-index: 5000;
+}
+.spinner > div{
+  box-sizing: border-box;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  100%{
+    transform: rotate(360deg);
+  }
+}
+
 /* Grid */
 .contenedorGeneral {
   display: grid;
